# opencpn-libs

./: README.md
SQLiteCpp/: CMakeLists.txt
SQLiteCpp/include/SQLiteCpp/: Assertion.h  Backup.h  Column.h  Database.h  Exception.h  SQLiteCpp.h  Statement.h  Transaction.h  Utils.h  VariadicBind.h
SQLiteCpp/src/: Backup.cpp  Column.cpp  Database.cpp  Exception.cpp  Statement.cpp  Transaction.cpp
WindowsHeaders/: CMakeLists.txt
WindowsHeaders/include/GL/: GLU.h  gl.h  glext.h
api-16/: CMakeLists.txt  ocpn_plugin.h
api-17/: CMakeLists.txt  ocpn_plugin.h
api-18/: CMakeLists.txt  ocpn_plugin.h
api-18/msvc-wx32/: opencpn.lib
api-19/: CMakeLists.txt  ocpn_plugin.h
api-19/msvc-wx32/: README.md  opencpn.lib
api-20/: CMakeLists.txt  ocpn_plugin.h
api-20/msvc-wx32/: opencpn.lib
api-21/: CMakeLists.txt  ocpn_plugin.h
api-21/msvc-wx32/: README.md  opencpn.lib
bzip2/: CMakeLists.txt
bzip2/include/: bzlib_private.h
curl/: CMakeLists.txt
curl/arm64-v8a/include/curl/: curl.h  curlver.h  easy.h
curl/armeabi-v7a/include/curl/: mprintf.h  multi.h  options.h  system.h  typecheck-gcc.h  urlapi.h
flatpak/: README.md  glu.yaml  libusb.yaml  marnav.yaml  portaudio.yaml
glu/: CMakeLists.txt
glu/include/: gluos.h
glu/include/GL/: gl.h  glext.h  glu.h
glu/libtess/: dict-list.h  dict.h  priorityq-heap.h  priorityq-sort.h  priorityq.h  sweep.h
iso8211/src/: ddffield.cpp  ddffielddefn.cpp  ddfmodule.cpp  ddfrecord.cpp  ddfsubfielddefn.cpp  ddfutils.cpp  iso8211.h
json-schema-validator/: CMakeLists.txt  json-schema-draft7.json.cpp  json-uri.cpp  json-validator.cpp
json-schema-validator/nlohmann/: json-schema.hpp
jsoncpp/: CMakeLists.txt
jsoncpp/src/lib_json/: json_reader.cpp  json_writer.cpp
jsonlib/: CMakeLists.txt
jsonlib/include/: json_batchallocator.h
jsonlib/include/json/: assertions.h  autolink.h  config.h  features.h  json.h  reader.h  value.h  writer.h
jsonlib/src/: json_reader.cpp  json_tool.h  json_value.cpp  json_writer.cpp
libglu/: CMakeLists.txt
libtess2/: CMakeLists.txt
libtess2/include/: bucketalloc.h  dict.h  geom.h  mesh.h  priorityq.h  sweep.h  tess.h  tesselator.h
libusb/: CMakeLists.txt
lz4/: CMakeLists.txt
lz4/src/: lz4.h  lz4hc.h
marnav/: CMakeLists.txt
n2kparser/: CMakeLists.txt
n2kparser/include/: N2KParser.h  N2kDef.h  N2kMessages.h  N2kMsg.h  N2kTypes.h  NMEA2000StdTypes.h
n2kparser/src/: N2KParser.cpp  N2kMessages.cpp  N2kMsg.cpp
nmea0183/: CMakeLists.txt
nmea0183/src/: GPwpl.cpp  apb.cpp  dpt.cpp  gga.cpp  gll.cpp  mda.cpp  nmea0183.cpp  nmea0183.h  nmea0183.hpp  sentence.cpp  vtg.cpp  xte.cpp  xte.hpp
ocpn-muparser/: CMakeLists.txt
ocpn-muparser/muparser/: CMakeLists.txt
ocpn-muparser/muparser/include/: muParser.h  muParserBase.h  muParserBytecode.h  muParserCallback.h  muParserDLL.h  muParserDef.h  muParserError.h  muParserFixes.h  muParserInt.h  muParserTemplateMagic.h  muParserTest.h  muParserToken.h  muParserTokenReader.h
ocpn-muparser/muparser/samples/example1/: example1.cpp
ocpn-muparser/muparser/samples/example3/: example3.cpp
ocpn-muparser/muparser/src/: muParser.cpp  muParserBase.cpp  muParserBytecode.cpp  muParserCallback.cpp  muParserDLL.cpp  muParserError.cpp  muParserInt.cpp  muParserTest.cpp  muParserTokenReader.cpp
ocpn-muparser/muparser/test/: t_ParserTest.cpp
odapi/: CMakeLists.txt  ODAPI.h  ODJSONSchemas.h
opencpn-glu/: CMakeLists.txt
opencpn-glu/include-android/GL/: gl.h  gl_mangle.h  glext.h  glu.h  glu_mangle.h  glx.h  glx_mangle.h  glxext.h
opencpn-glu/include-android/GL/internal/: dri_interface.h
opencpn-glu/include-android/GLES/: gl.h  gl2.h  gl2ext.h  gl3.h  gl3ext.h  glext.h
opencpn-glu/include-android/KHR/: khrplatform.h
opencpn-glu/include-android/unused/EGL/: egl.h  eglext.h  eglplatform.h
opencpn-glu/include-flatpak/GL/: glu.h
pluginDC/: CMakeLists.txt
pluginDC/include/: pidc.h
pluginDC/src/: TexFont.cpp  pidc.cpp
plugin_dc/: CMakeLists.txt  README.md
plugin_dc/dc_utils/: CMakeLists.txt
plugin_dc/dc_utils/include/: TexFont.h  pi_shaders.h  pidc.h
plugin_dc/dc_utils/src/: TexFont.cpp  pi_shaders.cpp  pidc.cpp  qtstylesheet.cpp
plugin_dc/glu/: CMakeLists.txt
plugin_dc/glu/include/: glu_gl.h
plugin_dc/glu/libtess/: geom.h  memalloc.h  mesh.h  tess.h  tessmono.h
plugin_dc/glu/libutil/: gluint.h
plugingl/: CMakeLists.txt
plugingl/include/: TexFont.h  pidc.h  shaders.h
plugingl/src/: .TexFont.cpp.swp  TexFont.cpp  pidc-orig.cpp  pidc.cpp
pthread/: CMakeLists.txt
pthread/win32/include/: pthread.h  sched.h
pugixml/: CMakeLists.txt
sqlite/: CMakeLists.txt
sqlite/include/: sqlite3.h
tinyxml/: CMakeLists.txt
tinyxml/include/: tinyxml.h
tinyxml/src/: tinyxml.cpp  tinyxmlparser.cpp
wxJSON/: CMakeLists.txt
wxJSON/include/wx/: json_defs.h  jsonreader.h  jsonval.h  jsonwriter.h
wxJSON/src/: jsonreader.cpp  jsonval.cpp  jsonwriter.cpp
wxcurl/: CMakeLists.txt
wxcurl/include/curl/: curl.h  curlbuild.h  easy.h  multi.h  stdcheaders.h
wxcurl/src/: base.cpp  dav.cpp  davtool.cpp  dialog.cpp  ftp.cpp  ftpparse.cpp  ftpparse.h  ftptool.cpp  http.cpp  panel.cpp  telnet.cpp  thread.cpp  utils.cpp
wxsvg/: CMakeLists.txt
wxsvg/include/wxSVG/: Animated.h  CSSStyleDeclaration.h  CSSValue.h  CSSValues.h  Document.h  DocumentCSS.h  DocumentEvent.h  Element.h  ElementTimeControl.h  EventTarget.h  ExifHandler.h  GetSVGDocument.h  NodeList.h  NodeListCls.h  RGBColor.h  SVGAElement.h  SVGAltGlyphDefElement.h  SVGAltGlyphElement.h  SVGAltGlyphItemElement.h  SVGAngle.h  SVGAnimateColorElement.h  SVGAnimateElement.h  SVGAnimateMotionElement.h  SVGAnimateTransformElement.h  SVGAnimatedAngle.h  SVGAnimatedBoolean.h  SVGAnimatedEnumeration.h  SVGAnimatedInteger.h  SVGAnimatedLength.h  SVGAnimatedLengthList.h  SVGAnimatedNumber.h  SVGAnimatedNumberList.h  SVGAnimatedPathData.h  SVGAnimatedPoints.h  SVGAnimatedPreserveAspectRatio.h  SVGAnimatedRect.h  SVGAnimatedString.h  SVGAnimatedTransformList.h  SVGAnimatedType.h  SVGAnimationElement.h  (+147 more)
wxsvg/include/wxSVGXML/: svgxml.h  svgxmlhelpr.h
zlib/include/zlib/: zlib.h
(+63 files in other folders)
